-Finally made a functional WordNet redundant text stripper. -Needs testing on UNIX machine. Compiles on Win by may not on UNIX.

--- a/stcawn.vcxproj
+++ b/stcawn.vcxproj
@@ -79,7 +79,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
     <ClCompile Include="porter2_stemmer.cpp" />
-    <ClCompile Include="WordNetOutputStripper.cpp" />
+    <ClCompile Include="WNStrip.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="porter2_stemmer.h" />
