--- a/stcawn.vcxproj.filters
+++ b/stcawn.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WordNetOutputStripper.cpp">
+    <ClCompile Include="WNStrip.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
