--- a/stcawn.vcxproj
+++ b/stcawn.vcxproj
@@ -76,8 +76,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GetHypon.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="WNStrip.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
