--- a/stcawn.vcxproj.filters
+++ b/stcawn.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WNStrip.cpp">
+    <ClCompile Include="GetHypon.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
