--- a/stcawn.vcxproj
+++ b/stcawn.vcxproj
@@ -76,6 +76,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ConvertMaster.cpp" />
     <ClCompile Include="GetHypon.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
