--- a/stcawn.vcxproj
+++ b/stcawn.vcxproj
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ConvertMaster.cpp" />
+    <ClCompile Include="GetHypon.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
